--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -95,7 +95,7 @@
 <div class="modal fade" id="shortflim" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
-			<div class="modal-body"><video style="height:100%;width:100%" controls><source src="{{ url_for('static', filename='shortflim.mp4') }}" type="video/mp4">Your browser unable to play this video.</video></div>
+			<div class="modal-body"><iframe style="height:450px;width:100%" src="https://www.youtube.com/embed/fUfbL8G_l4g">Your browser unable to play this video.</iframe></div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 			</div>
